added sketch of mq 375 of card

--- a/index.html
+++ b/index.html
@@ -17,8 +17,29 @@
 
 
         <div class="card__container">
-            <div class="card card__one"></div>
-            <div class="card card__two"></div>
+            <div class="card card__one">
+                <div class="card__one__head">
+                    <p>Nazwa firmy/Logo firmy</p>
+                </div>
+
+                <div class="card__one__text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex numquam tempora soluta provident
+                    aperiam dolor repudiandae tempore laborum similique iste ullam modi, omnis sunt magnam, eum autem
+                    ratione mollitia! Repudiandae.
+                </div>
+
+
+                <div class="card__one__footer">
+                    <p>Jan Kowalski</p>
+                    <p>90-000 Warszawa</p>
+                    <p>Firma XYZ</p>
+                    <p>NIP: 727-272-72-72</p>
+                    <p>Regon: 123-123-11-22</p>
+                    <p>Nr telefonu: 510-000-000</p>
+                    <p>Adres email: jk.xyx@xyz.pl</p>
+                </div>
+            </div>
+
 
         </div>
 
