--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Oswald&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.min.css">
     <title>Exclusive Buisness Card</title>
 
@@ -15,33 +19,20 @@
 
     <div class="wrapper">
 
-
-        <div class="card__container">
-            <div class="card card__one">
-                <div class="card__one__head">
-                    <p>Nazwa firmy/Logo firmy</p>
-                </div>
-
-                <div class="card__one__text">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex numquam tempora soluta provident
-                    aperiam dolor repudiandae tempore laborum similique iste ullam modi, omnis sunt magnam, eum autem
-                    ratione mollitia! Repudiandae.
-                </div>
-
-
-                <div class="card__one__footer">
-                    <p>Jan Kowalski</p>
-                    <p>90-000 Warszawa</p>
-                    <p>Firma XYZ</p>
-                    <p>NIP: 727-272-72-72</p>
-                    <p>Regon: 123-123-11-22</p>
-                    <p>Nr telefonu: 510-000-000</p>
-                    <p>Adres email: jk.xyx@xyz.pl</p>
-                </div>
+        <div class="card">
+            <h1 class="card__title">PatDev Company</h1>
+            <p class="card__text">Firma PatDev Company Sp z o.o. tworzy najlepsze strony internetowe pod słońcem. Każda strona jest budowana od samych podstaw. Zadbamy o to aby Twoja strona była responsywna, nowoczesna i dobrze pozycjonowana w wyszukiwarkach internetowych. Oferujemy najwyższą jakość usług i atrakcyjne ceny. Skontaktuj się z nami i daj się zauważyć w sieci. </p>
+            <div class="card__company-data">
+                <p>Jan Kowalski</p>
+                <p>01-000 Warszawa</p>
+                <p>Ul. Wiejska 12</p>
+                <p>510-000-111</p>
+                <p>NIP: 991-527-41-41</p>
+                <p>REGON: 123-123-4333</p>
+                <a href="https://github.com/PatrykChm">www.jankowalski.pl</a>
             </div>
-
-
         </div>
+
 
     </div>
 
